--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.artemis.broker-url=tcp://localhost:61616
 spring.artemis.mode =native
 spring.artemis.user=admin
 spring.artemis.password=admin
+#spring.jms.pub-sub-domain=false
+#spring.jms.listener.acknowledge-mode=CLIENT
+
+
+
 
